# multimodal-video-retrieval

./: .gitignore  README.md  pyproject.toml  urls.txt
config/: entity_aliases.json
src/youtube_pipeline/: batch.py  cli.py  documents.py  evaluation.py  gemini_summary.py  keyframes.py  ner.py  ocr.py  reranker.py  retrieval.py  retrieval_server.py  scenes.py  stage_pipeline.py  thumbnails.py  translate_subtitles.py
